--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
         <title>Talen</title>
+        <style type="text/css">
+            .background-popup { display: none;  background-color: #000000; opacity: 0.7; position: absolute; top: 0; right: 0; bottom: 0; left: 0; z-index: 99; }
+            .content-popup { font-family: Verdana; display: none; background-color: #FFFFFF; position: absolute; top: 10%; right: 15%; bottom: 10%; left: 15%; z-index: 999; border: 7px solid #BBBBBB; }
+            .content-popup .popup-heading { background-color: #BBBBBB; padding: 7px 0; }
+            .content-popup .popup-heading h4 { margin: 7px 5px; }
+            .content-popup .popup-heading h4 span { position: absolute; right: 7px; cursor: pointer; }
+            .content-popup .popup-heading h4 span:hover { color: #FFFFFF; }
+            .content-popup .popup-body { padding: 5px; }
+            .popup-loading { display: none; font-family: Verdana; max-width: 150px; position: absolute; top: 45%; left: 45%; background-color: #000000; color: #FFFFFF; padding: 10px; z-index: 998; }
+        </style>
+
     </head>
     <body>
 
@@ -157,7 +168,7 @@
             <p class="footer__copy">&#169; 2022 Dark Side.</p>
         </footer>
 
-        <!--========== SCROLL REVEAL ==========-->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!-- ========== MAIN JS ========== -->
