--- a/index.html
+++ b/index.html
@@ -170,9 +170,34 @@
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
-
-        <!-- ========== MAIN JS ========== -->
         <script src="main.js"></script>
+        <script type="text/javascript">
+        $(function(){
+          $background_element = $('.background-popup');
+          $content_element = $('.content-popup');
+          $loading = $('.popup-loading');
+
+          $('.btn-popup').on('click', function(){
+            $background_element.fadeIn('fast');
+            $loading.fadeIn('fast');
+
+            setTimeout(function(){ $content_element.fadeIn('fast'); $loading.fadeOut('fast'); }, 1000);
+          });
+
+          $('.close-popup').on('click', function(){
+            $background_element.fadeOut('fast');
+            $content_element.fadeOut('fast');
+          });
+
+          $(this).on('keyup', function(e){
+            if(e.which == 27){
+               $background_element.fadeOut('fast');
+               $content_element.fadeOut('fast');
+            }
+          });
+        });
+</script>
+
 
     </body>
 </html>
