--- a/index.html
+++ b/index.html
@@ -164,6 +164,19 @@
 
                 </div>
             </div>
+            
+            <div class="background-popup"></div>
+                <div class="content-popup">
+                  <div class="popup-heading">
+                    <h4>Disini untuk judul popup <span class="close-popup">X</span></h4>
+                  </div>
+                  <div class="popup-body">
+                  Disini untuk konten popup
+                  </div>
+                </div>
+                <div class="popup-loading">loading. . .</div>
+                <button class="btn-popup">POPUP</button>
+
 
             <p class="footer__copy">&#169; 2022 Dark Side.</p>
         </footer>
