--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
-        <title>Talen</title>
+        <title>Login Ke Talen</title>
     </head>
     <body>
         <header class="l-header" id="header">
