--- a/login.html
+++ b/login.html
@@ -26,5 +26,7 @@
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-menu'></i>
                 </div>
+                
+                <script type="text/javascript" src="main.js"></script>
             </nav>
         </header>
