--- a/login.html
+++ b/login.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
         <title>Login Ke Talen</title>
+        <style>
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        </style>
     </head>
     <body>
         <header class="l-header" id="header">
@@ -24,6 +30,27 @@
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-menu'></i>
                 </div>
+                
+                <form>
+                  <div class="header">
+                    <h1 class="title">Login</h1>
+                  </div>
+
+                  <div class="kotak">
+                    <div class="kotak-input">
+                      <label class="label">Username</label>
+                      <input class="input" type="text" placeholder="Username">
+                    </div>
+                    <div class="kotak-input">
+                      <label class="label">Password</label>
+                      <input class="input" type="password" placeholder="Password">
+                    </div>
+                    <button class="tombol">Login</button>
+                  </div>
+
+                  <a href="daftar.html">Belum punya akun? Daftar Disini</a>
+                </form>
+
                 
                 <script type="text/javascript" src="main.js"></script>
             </nav>
