--- a/login.html
+++ b/login.html
@@ -10,10 +10,49 @@
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
         <title>Login Ke Talen</title>
         <style>
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+
+                input[type=text], select, input[type=number]{
+                    width: 100%;
+                    padding: 12px 20px;
+                    margin: 8px 0;
+                    display: inline-block;
+                    border: 1px solid #ccc;
+                    border-radius: 4px;
+                    box-sizing: border-box;
+                }
+
+                input[type=submit] {
+                    width: 10%;
+                    background-color: #4CAF50;
+                    color: white;
+                    padding: 14px 20px;
+                    margin: 8px 0;
+                    border: none;
+                    border-radius: 4px;
+                    cursor: pointer;
+                }
+
+                input[type=submit] :hover {
+                    background-color: #45a049;
+                }
+
+                div {
+                    border-radius: 5px;
+                    background-color: #f2f2f2;
+                    padding: 20px;
+                }
+
+                .kotakform {
+                    width: 80%;
+                    margin: 20px auto 20px auto;
+                }
+
+                h1 {
+                    text-align: center;
+                    font-family: 'Segoe UI';        
+                }
+
+
         </style>
     </head>
     <body>
