--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--========== BOX ICONS ==========-->
+        <!--========== Bagian BOX ICONS ==========-->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <!--========== CSS ==========-->
+        <!--========== Bagian CSS ==========-->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="style2.css">
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
