--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                        <li class="nav__item"><a href="#tentangkami" class="nav__link">Tentang Kami</a></li>
-                        <li class="nav__item"><a href="#team" class="nav__link active-link">Team</a></li>
+                        <li class="nav__item"><a href="#tentangkami" class="nav__link">Tentang Saya</a></li>
+                        <li class="nav__item"><a href="#team" class="nav__link active-link">Proyek</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Kontak Kami</a></li>
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
@@ -44,8 +44,8 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="about__data">
-                        <h2 class="section-title about__initial">Kami telah menemukan banyak bakat orang</h2>
-                         <p class="home__subtitles">Kami menemukan bakat seseorang dengan melakukan berbagai uji coba yang menarik. </p> <br>
+                        <h2 class="section-title about__initial">Farid Syifa Arrahim</h2>
+                         <p class="home__subtitles">Web Designer | Programmer | UL/UX Designer | Short Story Writer | Content Writer | Graphics Designer | Student</p> <br>
                         <a href="#" class="button">Lihat Lainnya</a>
                         <a href="login.html" class="button-home">Login</a>
                     </div>
