--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="style.css">
+        <style>
+            .typing{
+            animation: typing 5s steps(22) 1s infinite alternate;
+            }
+        </style>
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
         <title>Talen</title>
     </head>
@@ -45,7 +50,7 @@
                 <div class="home__container bd-container bd-grid">
                     <div class="about__data">
                         <h2 class="section-title about__initial">Farid Syifa Arrahim</h2>
-                         <p class="home__subtitles text"></p> <br>
+                         <p class="home__subtitles typing">Web Designer | Programmer | UL/UX Designer | Short Story Writer | Content Writer | Graphics Designer | Student</p> <br>
                         <a href="#" class="button">Lihat Lainnya</a>
                         <a href="login.html" class="button-home">Login</a>
                     </div>
@@ -158,18 +163,4 @@
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="main.js"></script>
     </body>
-    
-    <script>
-        var i=0,text;
-            text = "Web Designer | Programmer | UL/UX Designer | Short Story Writer | Content Writer | Graphics Designer | Student"
-
-        function ketik() {
-                if(i<text.length){
-                  document.getElementById("text").innerHTML += text.charAt(i);
-                  i++;
-                  setTimeout(ketik,80);
-                }
-              }
-              ketik();
-    </script>
 </html>
